# journalcoach

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/journalcoach/: app.py  controller.py  secrets_loader.py
src/journalcoach/config/: env.py
src/journalcoach/services/: llm.py
src/journalcoach/storage/: jsonl_store.py
src/journalcoach/ui/: history.py  view.py
src/journalcoach/utils/: rate_limit.py  retry.py  threads.py
