[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "journalcoach"
version = "0.1.0"
description = "Tkinter journal Q and A and summarizer using OpenAI Responses API"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
